# webladder

./: CMakeCache.txt  CMakeLists.txt  README.md
core/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  core
core/src/: Hello.cpp  utils.cpp
core/test/: Hello-test.cpp
utils/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  utilstest
utils/inc/: properties.h
utils/src/: properties.cc  property.cc  property.cpp
utils/test/: propertytest.cc  propertytest.cpp
view/: CMakeLists.txt  index.html
